# attention-kernel-challenge

./: .gitignore  README.md  pyproject.toml
attention_kernel_challenge/: __init__.py  backends.py  cases.py  cli.py  config.py  evaluator.py  execution_policy.py  isolated_submission.py  modal_backend.py  reference.py  sandbox.py  spec.py  submission_loader.py  validation.py
example_submission/: submission.py
sandbox/: nsjail.cfg
tests/: test_backend_config.py  test_execution_policy.py  test_harness.py  test_reference.py  test_sandbox.py  test_submission_loader.py
