[project]
name = "attention-kernel-challenge"
version = "0.1.0"
description = "Local harness for the Attention Kernel Challenge."
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["attention_kernel_challenge*"]
